--- a/Assigment.html
+++ b/Assigment.html
@@ -9,13 +9,19 @@
 		<main>
 			<h3> You're probably going to miss</h3>
 			<img src=football.jpeg">
-			<h6>I bet you're nose to nose with the WR at the snap of the ball. 
+			<h4>I bet you're nose to nose with the WR at the snap of the ball. 
 			Love the aggressiveness but you have to back up. 
 			Being too close makes trying to destroy the WR at the snap of the ball will tempt you to lunge, 
-			and if you miss you're automatically in trail and the route hasn't even started.</h6></p>
+			and if you miss you're automatically in trail and the route hasn't even started.</h4></p>
+			<blockquote><p> "Patience is a virtue."</p></blockquote>
 		<footer>Contact Jalen Inc. 555-555-5555</footer>
 		</main>
-		<a href="https://media.gettyimages.com/photos/jalen-allison-of-the-north-dakota-state-bison-reacts-to-a-play-the-picture-id1091075162?s=2048x2048">Championship game</a>
-		<a href="Dog.html">Doggos</a>
+	<nav>
+		<a href="file:///C:/Users/Admin/Documents/GitHub/Tech-Academy-Project/HTML-and-CSS-Projects/Assigment.html">Assignment page</a> |
+		<a href="https://media.gettyimages.com/photos/jalen-allison-of-the-north-dakota-state-bison-reacts-to-a-play-the-picture-id1091075162?s=2048x2048">Championship game</a> |
+		<a href="Dog.html">Doggos</a> |
+		<a href="https://www.youtube.com/watch?v=KZUlXNuL02A">German Shepherd vids</a> |
+	</nav>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/GZ8bvTAcTFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</body>
 </html>
