--- a/Dog_Video.html
+++ b/Dog_Video.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head> 
-		<title>Implicit link assignment</title> 
+	<head>
+	<title>youtube dog videos</title>
+		<meta charset="utf-8">
 	</head>
-	<meta charset="utf-8">
 		<body>
-			<img src="dog pic.png">
 		<nav>
 			<a href="file:///C:/Users/Admin/Documents/GitHub/Tech-Academy-Project/HTML-and-CSS-Projects/Assigment.html">Assignment page</a>
 			<a href="Dog.html">Doggos</a>
