--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <script src="Basic_JavaScript_1.js"></script>
+	<body> 
+		<p><font color="green">Hello, my name is Jalen and i'm enjoying learning about software development.
+							This is a paragraph for the font assignment. I choose the color green, I hope it 
+							works first try. If not, no big deal. I just have look the code over closely and compare and see what I did wrong.
+							it's usually just a small error which makes it harder to find. </font></p>
+		<p><font color="#DC143C">Second paragraph, I'm on the train on the way to work. Its a crisp and foggy Monday morning
+								It's quiet on the train today which is good, gives me time to wake up over a period of time 
+								rather than having to be alert and attentive to everyone around me. I can see the sunrise peaking through between
+								the trees getting glimpses of warmth streaking across my face through the branches. Overall, its been a good train ride so far.
+		</font></p>
+	</body>	
 </html>
