--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -4,14 +4,15 @@
 		<title>Basic HTML and CSS assignment</title> 
 	</head>
 	<meta charset="utf-8">
-<body> 
 		<style> 
-		p {color:blue;}
+		p {
+			color: blue;
+			text-align: right;
+		}
 		</style>
+<body>
 		<p> Hello, I am currently using the style element. Text should be blue.</p>
-	<div style="color: orange">
 		<h2>DIV heading</h2>
 		<p>This is where my DIV paragraph would go. I wonder what it will look like.</p>
-	</div>
 </body>
 </html>
