--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -4,13 +4,9 @@
 		<title>Basic HTML and CSS assignment</title> 
 	</head>
 	<meta charset="utf-8">
-		<style> 
-		p {
-			color: blue;
-			text-align: right;
-		}
-		</style>
+	
 <body>
+		<link rel="stylesheet" type="text/css" href="Basic_CSS_1.css">
 		<p> Hello, I am currently using the style element. Text should be blue.</p>
 		<h2>DIV heading</h2>
 		<p>This is where my DIV paragraph would go. I wonder what it will look like.</p>
