--- a/BasicHTML.html
+++ b/BasicHTML.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
 	<head>
-		<title?Basic HTML</title>
+		<title>Basic HTML</title>
 		<meta charset="UTF-8">
 		<meta name="author" content="Lacey">
 	</head>
@@ -10,5 +10,6 @@
 			<h4>Basic HTML Template</h4>
 		</header>
 		<p>Introduction to basic HTML syntax.</p>
+		<p>Added another paragraph</p>
 	</body>
 </html>
