--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -10,8 +10,8 @@
 			<div>
 				<ul>
 					<a href="#home" id="link"><li>HOME</li></a>
-					<a href="#gallery" id="link"><li>GALLERY</li></a>
-					<a href="#contact" id="link"><li>SIGN UP</li></a>
+					<a href="#gallery"><li>GALLERY</li></a>
+					<a href="#contact"><li>SIGN UP</li></a>
 				</ul>
 			</div>
 		</div>
