--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -50,7 +50,7 @@
 
 					<!-- PHOTO CONTAINER 2 -->
 					<div class="photo-container">
-						<div>
+						<div class="photo">
 							<img src="./images/thumb/thumbnail_2.jpg" alt="">
 							<div class="photo-overlay">
 								<h3>Click to see details</h3>
@@ -62,7 +62,7 @@
 
 					<!-- PHOTO CONTAINER 3 -->
 					<div class="photo-container">
-						<div>
+						<div class="photo">
 							<img src="./images/thumb/thumbnail_3.jpg" alt="">
 							<div class="photo-overlay">
 								<h3>Click to see details</h3>
@@ -74,7 +74,7 @@
 
 					<!-- PHOTO CONTAINER 4 -->
 					<div class="photo-container">
-						<div>
+						<div class="photo">
 							<img src="./images/thumb/thumbnail_4.jpg" alt="">
 							<div class="photo-overlay">
 								<h3>Click to see details</h3>
@@ -86,7 +86,7 @@
 
 					<!-- PHOTO CONTAINER 5 -->
 					<div class="photo-container">
-						<div>
+						<div class="photo">
 							<img src="./images/thumb/thumbnail_5.jpg" alt="">
 							<div class="photo-overlay">
 								<h3>Click to see details</h3>
@@ -98,7 +98,7 @@
 
 					<!-- PHOTO CONTAINER 6 -->
 					<div class="photo-container">
-						<div>
+						<div class="photo">
 							<img src="./images/thumb/thumbnail_6.jpg" alt="">
 							<div class="photo-overlay">
 								<h3>Click to see details</h3>
@@ -110,7 +110,7 @@
 
 					<!-- PHOTO CONTAINER 7 -->
 					<div class="photo-container">
-						<div>
+						<div class="photo">
 							<img src="./images/thumb/thumbnail_7.jpg" alt="">
 							<div class="photo-overlay">
 								<h3>Click to see details</h3>
@@ -122,7 +122,7 @@
 
 					<!-- PHOTO CONTAINER 8 -->
 					<div class="photo-container">
-						<div>
+						<div class="photo">
 							<img src="./images/thumb/thumbnail_8.jpg" alt="">
 							<div class="photo-overlay">
 								<h3>Click to see details</h3>
@@ -134,7 +134,7 @@
 
 					<!-- PHOTO CONTAINER 9 -->
 					<div class="photo-container">
-						<div>
+						<div class="photo">
 							<img src="./images/thumb/thumbnail_9.jpg" alt="">
 							<div class="photo-overlay">
 								<h3>Click to see details</h3>
