--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -3,6 +3,7 @@
 	<head>
 		<title> Customs | Heat on feet</title>
 		<meta charset="utf-8">.
+		<link rel="stylesheet" href="./css/one_page_website.css">
 	</head>
 <body>
 		<!-- Nav -->
@@ -126,9 +127,9 @@
 		  <!-- CONSULTATION -->
 		 <section>
 			<div id="consultation">
-				<div>
-					<h1>Consultation</h1>
-					<div>
+				<div class="container">
+					<h1 class="heading-padding">Consultation</h1>
+					<div class="consultation">
 						<h2><span>Design your perfect shoe that you've always wanted.<br> 
 						</span>
 							<p>Anime, potraits, scenery, animals and more. We can do it all!</p>
@@ -136,7 +137,7 @@
 						<p>
 							Please provide us with your basic contact information.
 						</p>
-						<div>
+						<div class="form-consultation">
 							<form action="" method="post">
 								<input class="rsvp" type="text" value="First Name">
 								<input class="rsvp" type="text" value="Last Name">
@@ -145,7 +146,7 @@
 								<div class="form-spacer">
 									<label class="terms">Terms and Conditions</label>
 								</div>
-								<div>
+								<div class="submit">
 									<input type="submit" value="Submit">
 								</div>
 							</form>
@@ -164,8 +165,7 @@
 					<div>
 							<iframe width="894" height="643" src="https://www.youtube.com/embed/Ip2WovuP8SI" title="YouTube video player" 
 							frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-							allowfullscreen></iframe>">
-						</iframe>
+							allowfullscreen></iframe>
 					</div>	
 				</div>
 			</div>
