--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -23,11 +23,81 @@
 		<div id="home">
 			<div>
 				<div>
-					<span><h1>K.O.D.</h1></span>
+					<span><h1>K.O.T.D</h1></span>
 				</div>
 			</div>
 		</div>
 		<!--END HOME -->
+
+		<!-- Images used to open the lightbox -->
+<div class="row">
+	<div class="column">
+	  <img src="./image2/thumb2/thumbnail_11.jpeg"  onclick="openModal();currentSlide(1)" class="hover-shadow">
+	</div>
+	<div class="column">
+	  <img src="./image2/thumb2/thumbnail_22.jpg"  onclick="openModal();currentSlide(2)" class="hover-shadow">
+	</div>
+	<div class="column">
+	  <img src="./image2/thumb2/thumbnail_33.jpg"  onclick="openModal();currentSlide(3)" class="hover-shadow">
+	</div>
+	<div class="column">
+	  <img src="./image2/thumb2/thumbnail_44.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+	</div>
+  </div>
+  
+  <!-- The Modal/Lightbox -->
+  <div id="myModal" class="modal">
+	<span class="close cursor" onclick="closeModal()">&times;</span>
+	<div class="modal-content">
+  
+	  <div class="mySlides">
+		<div class="numbertext">1 / 4</div>
+		<img src="./image2/thumb2/thumbnail_11.jpeg" style="width:40% height:auto">
+	  </div>
+  
+	  <div class="mySlides">
+		<div class="numbertext">2 / 4</div>
+		<img src="./image2/thumb2/thumbnail_22.jpg" style="width:40% height:auto">
+	  </div>
+  
+	  <div class="mySlides">
+		<div class="numbertext">3 / 4</div>
+		<img src="./image2/thumb2/thumbnail_33.jpg" style="width:40% height:auto">
+	  </div>
+  
+	  <div class="mySlides">
+		<div class="numbertext">4 / 4</div>
+		<img src="./image2/thumb2/thumbnail_44.jpg" style="width:40% height:auto">
+	
+	  </div>
+  
+	  <!-- Next/previous controls -->
+	  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  
+	  <!-- Caption text -->
+	  <div class="caption-container">
+		<p id="caption"></p>
+	  </div>
+  
+	  <!-- Thumbnail image controls -->
+	  <div class="column">
+		<img class="demo" src="./image2/thumb2/thumbnail_11.jpeg" onclick="currentSlide(1)" alt="Anime shoe">
+	  </div>
+  
+	  <div class="column">
+		<img class="demo" src="./image2/thumb2/thumbnail_22.jpg" onclick="currentSlide(2)" alt="Christmas celtic 11s">
+	  </div>
+  
+	  <div class="column">
+		<img class="demo" src="./image2/thumb2/thumbnail_33.jpg" onclick="currentSlide(3)" alt="Gaming 4s">
+	  </div>
+  
+	  <div class="column">
+		<img class="demo" src="./image2/thumb2/thumbnail_44.jpg" onclick="currentSlide(4)" alt="Air-1 butterfly">
+	  </div>
+	</div>
+  </div>
 		
 		<!-- GALLERY -->
 		<section>
@@ -38,7 +108,9 @@
 					<!-- PHOTO CONTAINER 1 -->
 					<div>
 						<div>
-							<img src="./image2/thumb2/thumbnail_11.jpeg" alt="Naurto shoe">
+							<img src="./image2/thumb2/thumbnail_11.jpeg" alt="Anime shoe"
+							width="400"
+							height="400"/>
 							<div>
 								<h3>Anime Collection</h3>
 								<p>Rep your clan with confidence.<br>
@@ -52,7 +124,9 @@
 					<!-- PHOTO CONTAINER 2 -->
 					<div>
 						<div>
-							<img src="./image2/thumb2/thumbnail_22.jpg" alt="Christmas celetic 11s">
+							<img src="./image2/thumb2/thumbnail_22.jpg" alt="Christmas celetic 11s"
+							width="400"
+							height="400"/>
 							<div>
 								<h3>Sports Collection</h3>
 								<p>For our sports fanatics, rock your team how you want.<br>
@@ -66,7 +140,9 @@
 					<!-- PHOTO CONTAINER 3 -->
 					<div>
 						<div>
-							<img src="./image2/thumb2/thumbnail_33.jpg" alt="Gaming 4s">
+							<img src="./image2/thumb2/thumbnail_33.jpg" alt="Gaming 4s"
+							width="400"
+							height="400"/>
 							<div>
 								<h3>Gaming Collection</h3>
 								<p>For our gamers. Design whichever system is your favorite. We don't discriminate.<br>
@@ -80,7 +156,9 @@
 					<!-- PHOTO CONTAINER 4-->
 					<div>
 						<div>
-							<img src="./image2/thumb2/thumbnail_44.jpg" alt="Air-1 butterfly">
+							<img src="./image2/thumb2/thumbnail_44.jpg" alt="Air-1 butterfly"
+							width="400"
+							height="400"/>
 							<div>
 								<h3>Sleek Collection</h3>
 								<p>For our more simple design lovers.<br>
@@ -94,7 +172,9 @@
 					<!-- PHOTO CONTAINER 5 -->
 					<div>
 						<div>
-							<img src="./image2/thumb2/thumbnail_55.jpg" alt="Kobe Potrait">
+							<img src="./image2/thumb2/thumbnail_55.jpg" alt="Kobe Potrait"
+							width="400"
+							height="400"/>
 							<div>
 								<h3>Portrait Collection</h3>
 								<p>Send in a portrait and we'll capture the details of a loved one or your hero.<br>
@@ -108,7 +188,9 @@
 					<!-- PHOTO CONTAINER 6 -->
 					<div>
 						<div>
-							<img src="./image2/thumb2/thumbnail_66.jpg" alt="Two-tone">
+							<img src="./image2/thumb2/thumbnail_66.jpg" alt="Two-tone"
+							width="400"
+							height="400"/>
 							<div>
 								<h3>Two-tone Collection</h3>
 								<p>Mix any two colors of your liking and see them flawlessy fade into eachother.<br>
@@ -124,6 +206,23 @@
 		</section>
 		 <!-- END GALLERY -->
 		 
+		<!-- MONTAGE -->
+		<section>
+			<div id="montage">
+				<div>
+					<h1>Montage</h1>
+					<p> Check out whats possible in the world of custom designed shoes.</p>
+					<div>
+							<iframe width="600" height="400" src="https://www.youtube.com/embed/Ip2WovuP8SI" title="YouTube video player" 
+							frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+							allowfullscreen></iframe>
+					</div>	
+				</div>
+			</div>
+		</section>
+		<!-- END Montage -->
+			
+
 		  <!-- CONSULTATION -->
 		 <section>
 			<div id="consultation">
@@ -157,21 +256,6 @@
 		</section>
 		<!--END CONSULTATION -->
 		
-		<!-- MONTAGE -->
-		<section>
-			<div id="montage">
-				<div>
-					<h1>Montage</h1>
-					<div>
-							<iframe width="894" height="643" src="https://www.youtube.com/embed/Ip2WovuP8SI" title="YouTube video player" 
-							frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-							allowfullscreen></iframe>
-					</div>	
-				</div>
-			</div>
-		</section>
-		<!-- END Montage -->
-			
 		
 		<!--FOOTER -->
 		<div>
@@ -179,5 +263,6 @@
 		</div>
 		<!-- END FOOTER -->
 		
+		<script src="JS/one_page_website.js"></script>
 	</body>
 </html>
